adding in form names to medical info choice

--- a/app/views/latest/04-medical-info.html
+++ b/app/views/latest/04-medical-info.html
@@ -37,11 +37,11 @@
       },
       {
         value: "2-cn2-with-inf",
-        text: "Coroner's post-mortem with informant"
+        text: "Coroner's post-mortem with informant (form CN2)"
       },
       {
         value: "3-inquest-no-inf",
-        text: "Coroner's inquest"
+        text: "Coroner's inquest (form 99RevA)"
       },
       {
         value: "4-informant",
