form 35 content change

--- a/app/views/latest/04-medical-info.html
+++ b/app/views/latest/04-medical-info.html
@@ -45,7 +45,7 @@
       },
       {
         value: "4-informant",
-        text: "Certificate from a midwife or registered practitioner is not available (form 35)"
+        text: "Certificate from a registered midwife or medical practitioner is not available (form 35)"
       }
     ]
   }) }}
