--- a/app/views/latest/03-child-correct.html
+++ b/app/views/latest/03-child-correct.html
@@ -92,7 +92,7 @@
           Place of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          St. Thomas' Hospital
+          St. Thomas' Hospital, Wakefield
         </dd>
         <dd class="govuk-summary-list__actions">
           
@@ -103,7 +103,7 @@
 
      <form action="04-medical-info" method="post" novalidate>
 
-    {% from "govuk/components/radios/macro.njk" import govukRadios %}
+    <!-- {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 
 {{ govukRadios({
@@ -125,7 +125,7 @@
       text: "Stillborn"
     }
   ]
-}) }}
+}) }} -->
 
 
 
