--- a/app/views/latest/04-medical-info.html
+++ b/app/views/latest/04-medical-info.html
@@ -41,7 +41,7 @@
       },
       {
         value: "3-inquest-no-inf",
-        text: "Coroner's inquest (form 99RevA)"
+        text: "Coroner's inquest (form 99A)"
       },
       {
         value: "4-informant",
