--- a/app/views/latest/informant/informant-triage/01-who-is-informant.html
+++ b/app/views/latest/informant/informant-triage/01-who-is-informant.html
@@ -24,7 +24,7 @@
         </p>
       -->
 
-      <form class="form" action="02-evidence" method="post">
+      <form class="form" action="03-married" method="post">
 
         
 
