--- a/app/views/latest/02b-notifications.html
+++ b/app/views/latest/02b-notifications.html
@@ -14,7 +14,7 @@
 {% block content %}
 
 
- <form class="form" action="03-multiple" method="post">
+ <form class="form" action="04-medical-info" method="post">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-three-quarters govuk-!-margin-bottom-3">
 
@@ -30,7 +30,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-three-quarters govuk-!-margin-bottom-4">
 <h2 class="govuk-heading-m">Search</h2>
-<p class="govuk-body"><a href="search" class="govuk-link">Search all notifications</a>, if you cannot find the notification you need.</p>
+<p class="govuk-body"><a href="02b-search-no-nhs-no.html" class="govuk-link">Search all notifications</a>, if you cannot see the notification you need.</p>
 </div>
 </div>
 
@@ -56,7 +56,7 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="03-multiple" class="govuk-link govuk-body-svuk-table__cell" >390 446 7891</a></td>
+      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="04-medical-info" class="govuk-link govuk-body-svuk-table__cell" >390 446 7891</a></td>
       <td class="govuk-table__cell">BANACH, Emily</td>
       <td class="govuk-table__cell">22/06/2025<br>22:30</td>
       <td class="govuk-table__cell">Male</td>
@@ -64,7 +64,7 @@
      
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="03-multiple" class="govuk-link govuk-body-svuk-table__cell">390 123 4567</a></td>
+      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="04-medical-info" class="govuk-link govuk-body-svuk-table__cell">390 123 4567</a></td>
       <td class="govuk-table__cell">SHORT, Celine</td>
       <td class="govuk-table__cell">06/07/2025<br>05:46</td>
       <td class="govuk-table__cell">Female</td>
@@ -72,7 +72,7 @@
      
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="03-multiple" class="govuk-link govuk-body-svuk-table__cell">390 123 4567</a></td>
+      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="04-medical-info" class="govuk-link govuk-body-svuk-table__cell">390 123 4567</a></td>
       <td class="govuk-table__cell">HUSEIN, Lila</td>
       <td class="govuk-table__cell">15/07/2025<br>10:30</td>
       <td class="govuk-table__cell">Male</td>
@@ -80,7 +80,7 @@
     
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="03-multiple" class="govuk-link govuk-body-svuk-table__cell">390 987 6543</a></td>
+      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="04-medical-info" class="govuk-link govuk-body-svuk-table__cell">390 987 6543</a></td>
       <td class="govuk-table__cell">SMITH, Olivia</td>
       <td class="govuk-table__cell">01/08/2025<br>14:15</td>
       <td class="govuk-table__cell">Female</td>
