--- a/app/views/latest/informant/informant-triage/05-check.html
+++ b/app/views/latest/informant/informant-triage/05-check.html
@@ -93,7 +93,7 @@ href: "javascript:window.history.back()"
     </dl>
 
 
-    <form action="/latest/informant/whose-details-form" method="post" novalidate>
+    <form action="../task-list" method="post" novalidate>
 
       {{ govukButton({
       text: "Create record"
