after 2nd GRO catchup and Form 35 addition
99A name changed from 99revA
task list not conditional upon informant info entered

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,8 @@
         <li>Medical certificate of stillbirth (form 34) </li>
          <li>Coroner with informant registration (CN2)</li>
     
-        <li>Coroner inquest - 99revA (no informant)</li>
+        <li>Coroner inquest - 99A (no informant)</li>
+        <li>No medical form  (form 35)</li>
        </ul>
      
      
