--- a/app/views/latest/no-informant/submit/check-answers-page.html
+++ b/app/views/latest/no-informant/submit/check-answers-page.html
@@ -40,7 +40,7 @@
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">Sex</dt>
       <dd class="govuk-summary-list__value">
-      {{ data['sex'] }}
+      {{ data['sex'] or 'Male' }}
       </dd>
       <dd class="govuk-summary-list__actions">
         <a class="govuk-link" href="../child-details/name-date.html">Change<span class="govuk-visually-hidden"> last name</span></a>
@@ -67,7 +67,7 @@
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">Place of stillbirth</dt>
       <dd class="govuk-summary-list__value">
-      {{ data['MCCDAddressLine1'] }}
+      {{ data['MCCDAddressLine1'] or 'Central Hospital, Wakefield' }}
       </dd>
       <dd class="govuk-summary-list__actions">
         <a class="govuk-link" href="../child-details/place-of-stillbirth.html">Change<span class="govuk-visually-hidden"> last name</span></a>
