--- a/app/views/latest/no-informant/task-list.html
+++ b/app/views/latest/no-informant/task-list.html
@@ -23,9 +23,9 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
  {% if data.userPostMortemDetail == "2-no-inf" %}
   Coroner's post-mortem without informant (CN2)
 {% elif data.userMedicalInfoSource == "3-no-inf" %}
-  Coroner's inquest (99revA)
+  Coroner's inquest (99A)
 {% else %}
-  Coroner's inquest (99revA)
+  Coroner's inquest (99A)
 {% endif %}
 
         
