--- a/app/views/latest/02b-notifications.html
+++ b/app/views/latest/02b-notifications.html
@@ -57,10 +57,10 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="04-medical-info" class="govuk-link govuk-body-svuk-table__cell" >390 446 7891</a></td>
-      <td class="govuk-table__cell">BANACH, Emily</td>
-      <td class="govuk-table__cell">22/06/2025<br>22:30</td>
+      <td class="govuk-table__cell">DUFFY, Anna</td>
+      <td class="govuk-table__cell">21/08/2025<br>22:30</td>
       <td class="govuk-table__cell">Male</td>
-      <td class="govuk-table__cell">Central Hospital</td>
+      <td class="govuk-table__cell">Central Hospital, Wakefield</td>
      
     </tr>
     <tr class="govuk-table__row">
@@ -68,7 +68,7 @@
       <td class="govuk-table__cell">SHORT, Celine</td>
       <td class="govuk-table__cell">06/07/2025<br>05:46</td>
       <td class="govuk-table__cell">Female</td>
-      <td class="govuk-table__cell">Queen Mary’s Hospital</td>
+      <td class="govuk-table__cell">Queen Mary’s Hospital, Wakefield</td>
      
     </tr>
     <tr class="govuk-table__row">
@@ -76,7 +76,7 @@
       <td class="govuk-table__cell">HUSEIN, Lila</td>
       <td class="govuk-table__cell">15/07/2025<br>10:30</td>
       <td class="govuk-table__cell">Male</td>
-      <td class="govuk-table__cell">Royal Free Hospital</td>
+      <td class="govuk-table__cell">Royal Free Hospital, Wakefield</td>
     
     </tr>
     <tr class="govuk-table__row">
@@ -84,7 +84,7 @@
       <td class="govuk-table__cell">SMITH, Olivia</td>
       <td class="govuk-table__cell">01/08/2025<br>14:15</td>
       <td class="govuk-table__cell">Female</td>
-      <td class="govuk-table__cell">St. Mary’s Hospital</td>
+      <td class="govuk-table__cell">St. Mary’s Hospital, Wakefield</td>
      
     </tr>
   
