--- a/app/views/latest/informant/task-list-conditional.html
+++ b/app/views/latest/informant/task-list-conditional.html
@@ -12,32 +12,31 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Stillbirth registration</h1>
 
+     <!--<h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Informant type</h2>
 
+       <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
+          <a class="govuk-link govuk-task-list__link" href="informant-triage/06-check">
+            Informant type
+          </a>
+        </div>
+        <div class="govuk-task-list__status">
+          Completed
 
+        </div>
+      </li>
+    </ul> -->
+
+   {% if data.userMedicalInfoSource == "4-informant" %}
+
+    {% else %}
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Source of medical information</h2>
    
 
 
 <ul class="govuk-task-list">
-   {% if data.userMedicalInfoSource == "4-informant" %}
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="cause-of-death/f35-reason">
-            Reason medical certificate is not available
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.f35ReasonCompleted %}
-          Completed
-          {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-          {% endif %}
-        </div>
-      </li>
-      {% else %}
-
-      {% endif %}
 
 
    {% if data.userMedicalInfoSource == "1-informant" %}
@@ -60,9 +59,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       {% endif %}
 
     
-{% if data.userMedicalInfoSource == "4-informant" %}
 
- {% else %}
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="cause-of-death/cause-of-death">
@@ -77,7 +74,6 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% endif %}
         </div>
       </li>
-        {% endif %}
 
         {% if data.userMedicalInfoSource == "1-informant" %}
 
@@ -96,17 +92,39 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% endif %}
         </div>
       </li>
-   {% else %}
+   
 
       {% endif %}
 
     </ul>
-
+{% endif %}
    
+    {% if not data.whoseDetailsCompleted %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
 
+          <a class="govuk-link govuk-task-list__link" href="informant-triage/01-who-is-informant">
+            Informant and whose details will be recorded
+          </a>
+
+          <div class="govuk-task-list__hint ">
+            The rest of the form will become available after you complete this section.
+          </div>
+
+        </div>
+        <div class="govuk-task-list__status">
+          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+
+        </div>
+      </li>
+    </ul>
+
+    <!-- ELSE if the informant details have been complete the rest of the task list appears-->
 
   
-
+  
+  {% elif data.whoseDetailsCompleted %}
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child's details</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
@@ -303,7 +321,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
         </div>
       </li>
     </ul>
-  
+    {% endif %}
 
   </div>
 </div>
