--- a/app/views/latest/no-informant/cause-of-death/medical-info-check.html
+++ b/app/views/latest/no-informant/cause-of-death/medical-info-check.html
@@ -28,7 +28,7 @@
             </dt>
             <dd class="govuk-summary-list__value">
               
-  Coroner's inquest (99revA)
+  Coroner's inquest (99A)
 
               <p class="govuk-task-list__hint">You can't change the certificate type</p>
             </dd>
