removed redundant informant triage from no informant
also removed redundant 2nd search page
matched details in check answers
stillbirth table goes to check child is correct

--- a/app/views/latest/03-child-correct.html
+++ b/app/views/latest/03-child-correct.html
@@ -27,13 +27,13 @@
           NHS number
         </dt>
         <dd class="govuk-summary-list__value">
-          987 654 3210
+          390 446 7891
         </dd>
         <dd class="govuk-summary-list__actions">
          
         </dd>
       </div>
-      <div class="govuk-summary-list__row">
+      <!-- <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
           Live or stillbirth
         </dt>
@@ -43,13 +43,13 @@
         <dd class="govuk-summary-list__actions">
          
         </dd>
-      </div>
+      </div> -->
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
           Date and time of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          1 August 2015 10:15am
+          21 August 2015 10:15am
         </dd>
         <dd class="govuk-summary-list__actions">
         
@@ -71,7 +71,7 @@
           Mother's first name
         </dt>
         <dd class="govuk-summary-list__value">
-          Mary
+          Anna
         </dd>
         <dd class="govuk-summary-list__actions">
         
@@ -81,7 +81,7 @@
           Mother's last name
         </dt>
         <dd class="govuk-summary-list__value">
-          ADAMS
+          DUFFY
         </dd>
         <dd class="govuk-summary-list__actions">
          
@@ -92,7 +92,7 @@
           Place of birth
         </dt>
         <dd class="govuk-summary-list__value">
-          St. Thomas' Hospital, Wakefield
+          Central Hospital, Wakefield
         </dd>
         <dd class="govuk-summary-list__actions">
           
