inquest answers appearing in check answers page

--- a/app/views/latest/no-informant/cause-of-death/cause-of-death.html
+++ b/app/views/latest/no-informant/cause-of-death/cause-of-death.html
@@ -35,7 +35,7 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-form-group" data-testid="inquest-date"><label class="govuk-label govuk-!-font-weight-bold"
           for="inquestDate">Inquest dates</label><input id="inquestDate" name="inquestDate"
-          class="govuk-input govuk-input--width-20" autocomplete="off" value="">
+          class="govuk-input govuk-input--width-50" autocomplete="off" value="{{data['inquestDate']}}">
         </div>
        
 
