--- a/app/views/latest/no-informant/task-list.html
+++ b/app/views/latest/no-informant/task-list.html
@@ -125,7 +125,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
             Comments</a> (optional)
         </div>
         <div class="govuk-task-list__status">
-          {% if data.commentsCompleted %}
+          {% if data.commentsNICompleted %}
           Entered
           {% else %}
           
