remove reference to female parent

--- a/app/views/latest/no-informant/child-details/parents-details.html
+++ b/app/views/latest/no-informant/child-details/parents-details.html
@@ -73,7 +73,7 @@ href: "javascript:window.history.back()"
 </div>
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Is there a father or second female parent?
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Is there a father or second parent?
           </legend>
           <div class="govuk-radios">
             <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="parentType-1"
@@ -81,7 +81,7 @@ href: "javascript:window.history.back()"
                 for="parentType-1">Yes, a father</label></div>
             <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="parentType-2"
                 name="parentType" value="SECOND_PARENT"><label class="govuk-label govuk-radios__label"
-                for="parentType-2">Yes, a second female parent</label></div>
+                for="parentType-2">Yes, a second  parent</label></div>
             <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="parentType-3"
                 name="parentType" value="NONE"><label class="govuk-label govuk-radios__label"
                 for="parentType-3">No</label></div>
