caption and comments and triage route
-triage pages routing after check answers page visited
-caption text for all pages
-comments page like births
-section titles changed for Stillborn child's details and Additional information

--- a/app/views/latest/03-child-correct.html
+++ b/app/views/latest/03-child-correct.html
@@ -6,7 +6,7 @@
 
 {% block beforeContent %}
   {{ govukBackLink({
-    text: "Back to record",
+    text: "Back",
     href: "javascript:window.history.back()"
   }) }}
 {% endblock %}
