--- a/app/views/latest/04-medical-info.html
+++ b/app/views/latest/04-medical-info.html
@@ -16,7 +16,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-
+<span class="govuk-caption-l">Add record details</span>
+<h1 class="govuk-heading-l">Where is the medical information about the stillbirth taken from?</h1>
 
 <form class="form" method="POST" action="/latest/task-list-form">
   
@@ -25,9 +26,7 @@
     name: "userMedicalInfoSource",
     fieldset: {
       legend: {
-        text: "Where is the medical information about the stillbirth taken from?",
-        isPageHeading: true,
-        classes: "govuk-fieldset__legend--l"
+        isPageHeading: false
       }
     },
     items: [
