--- a/app/views/latest/informant/parents-details/fathers-details.html
+++ b/app/views/latest/informant/parents-details/fathers-details.html
@@ -21,6 +21,7 @@ Personal details – {{ serviceName }} – GOV.UK Prototype Kit
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
   
+          <span class="govuk-caption-l">Parent's details</span>
           <h1 class="govuk-heading-l">
             Father's details
           </h1>
