--- a/app/views/latest/informant/stats/voluntary.html
+++ b/app/views/latest/informant/stats/voluntary.html
@@ -24,6 +24,7 @@ Employment and industry information – {{ serviceName }} – GOV.UK Prototype K
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
   
+          <span class="govuk-caption-l">Statistics</span>
           <h1 class="govuk-heading-l">
             Voluntary statistics
           </h1>
