--- a/app/views/latest/no-informant/child-details/place-of-stillbirth.html
+++ b/app/views/latest/no-informant/child-details/place-of-stillbirth.html
@@ -21,6 +21,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
+          <span class="govuk-caption-l">Stillborn child's details</span>
           <h1 class="govuk-heading-l">
             Place of stillbirth
           </h1>
