--- a/app/views/latest/informant/cause-of-death/cause-of-death.html
+++ b/app/views/latest/informant/cause-of-death/cause-of-death.html
@@ -26,6 +26,7 @@ Cause of death – {{ serviceName }} – GOV.UK Prototype Kit
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
+          <span class="govuk-caption-l">Source of medical information</span>
           <h1 class="govuk-heading-l">
             Cause of death 
           </h1>
