--- a/app/views/latest/informant/cause-of-death/coroner-details.html
+++ b/app/views/latest/informant/cause-of-death/coroner-details.html
@@ -16,6 +16,7 @@ href: "javascript:window.history.back()"
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <span class="govuk-caption-l">Source of medical information</span>
     <h1 class="govuk-heading-l">
       Coroner details
     </h1>
