--- a/app/views/latest/informant/cause-of-death/pregnancy-delivery.html
+++ b/app/views/latest/informant/cause-of-death/pregnancy-delivery.html
@@ -16,6 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      <span class="govuk-caption-l">Source of medical information</span>
     <h1 class="govuk-heading-l">
         Pregnancy and delivery
       </h1> 
