--- a/app/views/latest/informant/informant-triage/03-married.html
+++ b/app/views/latest/informant/informant-triage/03-married.html
@@ -16,15 +16,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <!-- <h1 class="govuk-heading-l">
-        Was more than one child born in this pregnancy?
-      </h1> 
-      <p>
-          This includes both live births and stillbirths.
-        </p>
-      -->
+   <span class="govuk-caption-l">Add record details</span>
+<h1 class="govuk-heading-l">Are the parents married or in a civil partnership with each other?</h1>
 
-      <form class="form" action="04-who-else" method="post">
+      <form class="form" action="/latest/informant/03-married-form" method="post">
 
         
 
@@ -32,16 +27,6 @@
 
 {{ govukRadios({
   name: "marriedOrCivilPartnership",
-  fieldset: {
-    legend: {
-      text: "Are the parents married or in a civil partnership with each other?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--l"
-    }
-  },
-  hint: {
-    text: " "
-  },
 
   items: [
     {
