--- a/app/views/latest/informant/informant-triage/04-who-else.html
+++ b/app/views/latest/informant/informant-triage/04-who-else.html
@@ -16,32 +16,17 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <!-- <h1 class="govuk-heading-l">
-        Was more than one child born in this pregnancy?
-      </h1> 
-      <p>
-          This includes both live births and stillbirths.
-        </p>
-      -->
+    
+       <span class="govuk-caption-l">Add record details</span>
+<h1 class="govuk-heading-l">Who else's details will be recorded?</h1>
 
-      <form class="form" action="05-check" method="post">
 
-        
+      <form class="form" action="05-check" method="post">  
 
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
   name: "whoElseDetails",
-  fieldset: {
-    legend: {
-      text: "Who else's details will be recorded?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--l"
-    }
-  },
-  hint: {
-    text: " "
-  },
 
   items: [
     {
