--- a/app/views/latest/informant/parents-details/mothers-name.html
+++ b/app/views/latest/informant/parents-details/mothers-name.html
@@ -24,6 +24,7 @@ href: "javascript:window.history.back()"
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
+        <span class="govuk-caption-l">Parent's details</span>
         <h1 class="govuk-heading-l">
           Mother's name
         </h1>
