--- a/app/views/latest/informant/stats/confidential.html
+++ b/app/views/latest/informant/stats/confidential.html
@@ -24,6 +24,7 @@ href: "javascript:window.history.back()"
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+     <span class="govuk-caption-l">Statistics</span>
     <h1 class="govuk-heading-l">
       Confidential statistics
     </h1>
