--- a/app/views/latest/no-informant/cause-of-death/medical-info-check.html
+++ b/app/views/latest/no-informant/cause-of-death/medical-info-check.html
@@ -15,6 +15,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
+      <span class="govuk-caption-l">Source of medical information</span>
       <h1 class="govuk-heading-l">
         Medical cause of death details
       </h1>
