--- a/app/views/latest/no-informant/child-details/parents-details.html
+++ b/app/views/latest/no-informant/child-details/parents-details.html
@@ -24,6 +24,7 @@ href: "javascript:window.history.back()"
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <span class="govuk-caption-l">Stillborn child's details</span>
     <h1 class="govuk-heading-l">
       Parents' details
     </h1>
