--- a/app/views/latest/no-informant/submit/check-answers-page.html
+++ b/app/views/latest/no-informant/submit/check-answers-page.html
@@ -15,8 +15,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-xl">
-        Check your answers before submitting
+      <span class="govuk-caption-l">Submit the registration</span>
+      <h1 class="govuk-heading-l">
+        Check your answers before submitting the registration
       </h1>
        <h2 class="govuk-heading-m">
         Child's details
