--- a/app/views/latest/no-informant/submit/sign-page.html
+++ b/app/views/latest/no-informant/submit/sign-page.html
@@ -15,6 +15,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
+      <span class="govuk-caption-l">Submit the registration</span>
       <h1 class="govuk-heading-xl">
         Declaration
       </h1>
