--- a/app/views/latest/no-informant/supporting-info/comments.html
+++ b/app/views/latest/no-informant/supporting-info/comments.html
@@ -21,14 +21,15 @@ href: "javascript:window.history.back()"
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    <span class="govuk-caption-l">Additional information</span>
     <h1 class="govuk-heading-l">Comments</h1>
     <form autocomplete="off" novalidate="">
-      <div class="govuk-form-group govuk-!-margin-bottom-1" data-testid="comments"><label class="govuk-label"
-          for="comments">(optional)</label><textarea rows="5" id="comments" name="comments"
+      <div class="govuk-form-group govuk-!-margin-bottom-1" data-testid="comments"><label class="govuk-fieldset__legend govuk-fieldset__legend--s"
+          for="comments">Enter comments</label><textarea rows="5" id="comments" name="comments"
           class="govuk-textarea govuk-!-margin-bottom-1"></textarea></div>
       <section aria-live="polite"
         class="govuk-body govuk-character-count__message govuk-!-margin-bottom-4 govuk-character-count__status"><span
-          class="govuk-hint">You have 500 characters remaining overall</span></section><button type="submit"
+          class="govuk-hint">You have 500 characters remaining</span></section><button type="submit"
         class="govuk-button govuk-!-margin-top-5" data-testid="submit-comments">Save and return</button>
     </form>
 
