--- a/app/views/latest/no-informant/task-list.html
+++ b/app/views/latest/no-informant/task-list.html
@@ -69,7 +69,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
  
 
-    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child's details</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Stillborn child's details</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -117,18 +117,18 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       </li>
     </ul>
 
-   <h2 class="govuk-heading-m">Registrar's comments </h2>
+   <h2 class="govuk-heading-m">Additional information</h2>
        <ul class="govuk-task-list">
          <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="supporting-info/comments">
-            Comments</a> (optional)
+            Comments</a> 
         </div>
         <div class="govuk-task-list__status">
           {% if data.commentsNICompleted %}
           Entered
           {% else %}
-          
+           <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
           {% endif %}
         </div>
       </li>
