births journey-remove stillbirth references
-triage check answers behaviour in births
-captions addition
-comments changes
-name page- remove naming baby question
-nhs hint text in search

--- a/app/views/births/v1/child-details/place-of-stillbirth.html
+++ b/app/views/births/v1/child-details/place-of-stillbirth.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-Place of death – {{ serviceName }} – GOV.UK Prototype Kit
+Place of birth – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -21,8 +21,9 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
+          <span class="govuk-caption-l">Child's details</span>
           <h1 class="govuk-heading-l">
-            Place of stillbirth
+            Place of birth
           </h1>
           
           <form class="form" action="/births/v1/place-of-stillbirth-form" method="post">
@@ -99,7 +100,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
                   <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                  Place of death
+                  Place of birth
                 </legend>
                 <div class="govuk-form-group">
                   <label class="govuk-label govuk-label--xs" id="MCCDAddressLine1-label" for="MCCDAddressLine1">
@@ -125,7 +126,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
               <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                  Place of death
+                  Place of birth
                 </legend>
                 <div class="govuk-form-group">
                   <label class="govuk-label govuk-label--xs" id="MCCDAddressLine1-label" for="MCCDAddressLine1">
@@ -150,7 +151,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
               <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                  Place of death
+                  Place of birth
                 </legend>
                 <div class="govuk-form-group">
                   <label class="govuk-label govuk-label--xs" id="MCCDAddressLine1-label" for="MCCDAddressLine1">
@@ -191,7 +192,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
               var elsewhere = `
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                  Place of death
+                  Place of birth
                 </legend>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-line-1">
@@ -343,7 +344,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
             <!--<div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                  Place of death
+                  Place of birth
                 </legend>
                 <div class="govuk-form-group">
                   <label class="govuk-label govuk-label--xs" id="MCCDAddressLine1-label" for="MCCDAddressLine1">
