--- a/app/views/births/v1/informant-triage/01-who-is-informant.html
+++ b/app/views/births/v1/informant-triage/01-who-is-informant.html
@@ -24,10 +24,10 @@
         </p>
       -->
 
-      <form class="form" action="03-married" method="post">
+      <form class="form" action="02-evidence" method="post">
 
         
-
+<span class="govuk-caption-l">Add record details</span>
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
