--- a/app/views/births/v1/informant-triage/04-who-else.html
+++ b/app/views/births/v1/informant-triage/04-who-else.html
@@ -27,7 +27,7 @@
       <form class="form" action="05-check" method="post">
 
         
-
+<span class="govuk-caption-l">Add record details</span>
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
