--- a/app/views/births/v1/informant-triage/05-check.html
+++ b/app/views/births/v1/informant-triage/05-check.html
@@ -14,7 +14,7 @@ href: "javascript:window.history.back()"
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-
+<span class="govuk-caption-l">Add record details</span>
     <h1 class="govuk-heading-l">
       Check record details
     </h1>
@@ -32,7 +32,7 @@ href: "javascript:window.history.back()"
           "father": "Father",
           "secondParent": "Second parent",
           "motherAndFather": "Mother and father",
-          "motherAndParent": "Second parent",
+          "motherAndParent": "Mother and second parent",
           "otherInformant": "Other"
           } %}
           {{ whoIsInformantText[data['whoIsInformant']] or "Mother" }}
