--- a/app/views/births/v1/task-list.html
+++ b/app/views/births/v1/task-list.html
@@ -10,7 +10,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 {% block content %}
 <div class="govuk-grid-row govuk-!-margin-bottom-6">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">Stillbirth registration</h1>
+    <h1 class="govuk-heading-l">Birth registration</h1>
 
 
 
@@ -26,7 +26,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="child-details/name-date">
-            Name, sex and date of stillbirth
+            Name, sex and date of birth
           </a>
         </div>
         <div class="govuk-task-list__status">
@@ -41,7 +41,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="child-details/place-of-stillbirth">
-            Place of stillbirth
+            Place of birth
           </a>
         </div>
         <div class="govuk-task-list__status">
