--- a/app/views/births/v1/02-search.html
+++ b/app/views/births/v1/02-search.html
@@ -35,6 +35,9 @@ href: "javascript:window.history.back()"
     <div id="nhs-no" >
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="child-first-name">NHS number</label>
+               <div id="event-name-hint" class="govuk-hint">
+        It’s a 10-digit number, for example 987 654 3210
+        </div>
               <input class="govuk-input govuk-!-width-one-half" id="child-first-name" name="childNHSno"
                 type="text" value="{{data['childNHSno']}}">
             </div>
