--- a/app/views/births/v1/child-details/name-date.html
+++ b/app/views/births/v1/child-details/name-date.html
@@ -23,34 +23,16 @@ href: "javascript:window.history.back()"
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-
+<span class="govuk-caption-l">Child's details</span>
         <h1 class="govuk-heading-l">
-          Name, sex and date of stillbirth
+          Name, sex and date of birth
         </h1>
 
         <form class="form" action="/births/v1/name-date-form" method="post">
 
-          <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset" id="nameOrNot">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                Do the parents want to name their child?
-              </legend>
-              <div class="govuk-radios" data-module="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" checked id="yes-name" name="name-or-not" type="radio"
-                    value="yes-name">
-                  <label class="govuk-label govuk-radios__label" for="yes-name">Yes</label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="no-name" name="name-or-not" type="radio" value="no-name">
-                  <label class="govuk-label govuk-radios__label" for="no-name">No</label>
-                </div>
-              </div>
-            </fieldset>
-          </div>
-
+       
           <!-- Conditional block: Yes -->
-          <div id="yes-name-block" style="display: none;">
+          <div id="yes-name-block" >
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-first-name">First name (if available)</label>
               <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="deceasedFirstName"
@@ -180,97 +162,10 @@ href: "javascript:window.history.back()"
 
           </div>
 
-          <!-- Conditional block: No -->
-          <div id="no-name-block" style="display: none;">
-            <!-- Nothing to display -->
-          </div>
-
-
-
-
-
-
-          <!-- dont name their child only these show -->
-
+         
           <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
-    <div class="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{ checked("sex", "Female") }}>
-        <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="sex-2" name="sex" type="radio" value="Male" {{ checked("sex", "Male") }}>
-        <label class="govuk-label govuk-radios__label" for="sex-2">Male</label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="sex-3" name="sex" type="radio" value="Indeterminate" {{ checked("sex", "Indeterminate") }}>
-        <label class="govuk-label govuk-radios__label" for="sex-3">Indeterminate</label>
-      </div>
-    </div>
-  </fieldset>
-</div>
-
-          <!-- <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
-              <div class="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio" id="sex-1" name="sex" value="Female" >
-                    <label class="govuk-label govuk-radios__label" for="sex-1">Female</label></div>
-                <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="sex-2" name="sex"
-                    value="Male" ><label class="govuk-label govuk-radios__label" for="sex-2">Male</label></div>
-                <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="sex-3" name="sex"
-                    value="Indeterminate"><label class="govuk-label govuk-radios__label"
-                    for="sex-3">Indeterminate</label></div>
-              </div>
-            </fieldset>
-          </div> -->
-
-          <div id="dateOfDeathType_input" class="govuk-form-group">
-            <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Is the deceased’s exact date of death
-                known?</legend>
-              <div class="govuk-radios">
-                <div class="govuk-radios__item"><input class="govuk-radios__input" checked="" type="radio" id="dateOfDeathType-1"
-                    name="dateOfDeathType" value="FULL_DATE_OF_DEATH"><label class="govuk-label govuk-radios__label"
-                    for="dateOfDeathType-1">Yes, their exact date of death</label></div>
-                <div class="govuk-radios__conditional" id="conditional-dateOfDeathType-0">
-                  <!-- <div class="govuk-form-group">
-                    <fieldset class="govuk-fieldset">
-                      <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Enter the date of death</legend>
-                      <div id="dateOfDeath-hint" class="govuk-hint">For example, 23 11 2024.</div>
-                      <div id="dateOfDeath_input" class="govuk-date-input">
-                        <div class="govuk-date-input__item">
-                          <div class="govuk-form-group"><label class="govuk-label govuk-date-input__label"
-                              for="dateOfDeath_input-day">Day</label><input id="dateOfDeath_input-day"
-                              name="dateOfDeath-day" inputmode="number" maxlength="2"
-                              class="govuk-input govuk-input--width-2" aria-describedby="dateOfDeath-hint"
-                              autocomplete="off" value=""></div>
-                        </div>
-                        <div class="govuk-date-input__item">
-                          <div class="govuk-form-group"><label class="govuk-label govuk-date-input__label"
-                              for="dateOfDeath_input-month">Month</label><input id="dateOfDeath_input-month"
-                              name="dateOfDeath-month" inputmode="number" maxlength="2"
-                              class="govuk-input govuk-input--width-2" aria-describedby="dateOfDeath-hint"
-                              autocomplete="off" value=""></div>
-                        </div>
-                        <div class="govuk-date-input__item">
-                          <div class="govuk-form-group"><label class="govuk-label govuk-date-input__label"
-                              for="dateOfDeath_input-year">Year</label><input id="dateOfDeath_input-year"
-                              name="dateOfDeath-year" inputmode="number" maxlength="4"
-                              class="govuk-input govuk-input--width-4" aria-describedby="dateOfDeath-hint"
-                              autocomplete="off" value=""></div>
-                        </div>
-                      </div>
-                    </fieldset>
-                  </div> -->
-
-
-  <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Enter the date of death</legend>
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Date of birth</legend>
       <div id="dateOfDeath-hint" class="govuk-hint">For example, 23 11 2024.</div>
       <div id="dateOfDeath_input" class="govuk-date-input">
         <div class="govuk-date-input__item">
@@ -300,22 +195,32 @@ href: "javascript:window.history.back()"
       </div>
     </fieldset>
   </div>
-  
 
 
 
 
-                </div>
-                <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="dateOfDeathType-2"
-                    name="dateOfDeathType" value="PARTIAL_DATE_OF_DEATH"><label class="govuk-label govuk-radios__label"
-                    for="dateOfDeathType-2">No, only a partial date of death</label></div>
-                <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="dateOfDeathType-3"
-                    name="dateOfDeathType" value="DATE_BODY_FOUND" ><label
-                    class="govuk-label govuk-radios__label" for="dateOfDeathType-3">No, only the date when their body
-                    was found</label></div>
-              </div>
-            </fieldset>
-          </div>
+
+          <div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
+    <div class="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{ checked("sex", "Female") }}>
+        <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sex-2" name="sex" type="radio" value="Male" {{ checked("sex", "Male") }}>
+        <label class="govuk-label govuk-radios__label" for="sex-2">Male</label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sex-3" name="sex" type="radio" value="Indeterminate" {{ checked("sex", "Indeterminate") }}>
+        <label class="govuk-label govuk-radios__label" for="sex-3">Indeterminate</label>
+      </div>
+    </div>
+  </fieldset>
+</div>
+
+    
 
           <div class="govuk-button-group">
             {{ govukButton({
