--- a/app/views/births/v1/informant-triage/03-married.html
+++ b/app/views/births/v1/informant-triage/03-married.html
@@ -24,10 +24,10 @@
         </p>
       -->
 
-      <form class="form" action="04-who-else" method="post">
+      <form class="form" action="/births/v1/03-married-form" method="post">
 
         
-
+<span class="govuk-caption-l">Add record details</span>
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
