--- a/app/views/births/v1/submit/sign-page.html
+++ b/app/views/births/v1/submit/sign-page.html
@@ -14,7 +14,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-
+<span class="govuk-caption-l">Submit the registration</span>
       <h1 class="govuk-heading-xl">
         Declarations
       </h1>
