--- a/app/views/latest/03-child-correct.html
+++ b/app/views/latest/03-child-correct.html
@@ -137,6 +137,9 @@
 
       </form>
 
+       <div class="govuk-form-group">
+       <p class="govuk-body"><a href="02-search.html" class="govuk-link">No, return to search</a></p>
+      </div>   
     </div>
   </div>
 
