check answers h1 corrections

--- a/app/views/births/v1/submit/check-answers-page.html
+++ b/app/views/births/v1/submit/check-answers-page.html
@@ -16,7 +16,7 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
       <h1 class="govuk-heading-xl">
-        Check your answers before sending the birth registration
+        Check your answers before submitting the birth registration
       </h1>
        <h2 class="govuk-heading-m">
         Child's details
