--- a/app/views/latest/informant/submit/check-answers-page.html
+++ b/app/views/latest/informant/submit/check-answers-page.html
@@ -16,7 +16,7 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
      <span class="govuk-caption-l">Submit the registration</span>
       <h1 class="govuk-heading-l">
-        Check your answers before submitting the registration
+        Check your answers before submitting the stillbirth registration
       </h1>
        <h2 class="govuk-heading-m">
         Child's details
